--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tinkering-townsperson.github.io",
   "version": "0.1.0",
+  "homepage": "https://payamaroufi.xyz",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
@@ -10,6 +11,8 @@
     "terminal.css": "^0.7.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -34,6 +37,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.3.0",
     "web-vitals": "^4.2.4"
   }
 }
