feat: Remove unused tabs, update projects, add about me

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tinkering-townsperson.github.io",
-  "version": "0.1.0",
-  "homepage": "https://payamaroufi.xyz",
+  "version": "1.0.0",
+  "homepage": "https://tinkering-townsperson.github.io",
   "private": true,
   "dependencies": {
     "cra-template": "1.2.0",
